--- a/web_wearable/styles_session.css
+++ b/web_wearable/styles_session.css
@@ -1,91 +1,104 @@
 body {
-  margin: 0;
-  font-family: 'Poppins', sans-serif;
-  font-weight: 200;
-  text-emphasis: none;
-  text-align: center;
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    text-emphasis: none;
+    text-align: center;
 }
 
 .flex-container {
-  /* We first create a flex layout context */
-  display: flex;
-
-  /* Then we define the flow direction 
-       and if we allow the items to wrap 
-     * Remember this is the same as:
-     * flex-direction: row;
-     * flex-wrap: wrap;
-     */
-  flex-flow: row wrap;
-
-  /* Then we define how is distributed the remaining space */
-  justify-content: space-around;
-  padding: 10px;
-  margin: 0;
-  list-style: none;
-  background-color: #d33a2c;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    padding: 16px 0px;
+    margin: 0;
+    list-style: none;
+    background-color: #d33a2c;
 }
 
 .flex-item {
-  /* padding: 10px; */
-  width: 45%;
-  height: 35px;
-  line-height: 35px;
-  color: white;
-  font-weight: bold;
-  text-align: center;
-  /* background-color: turquoise; */
+    /* padding: 10px; */
+    width: 45%;
+    height: 35px;
+    line-height: 35px;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    /* background-color: turquoise; */
 }
 
 header {
-  box-shadow: 0 4px 20px 0 rgb(0 0 0 / 12%);
-  margin-bottom: 20px !important;
-
+    box-shadow: 0 4px 20px 0 rgb(0 0 0 / 12%);
+    margin-bottom: 20px !important;
+    position: fixed;
+    top: 0;
+    z-index: 99;
+    width: 100%;
 }
 
-span {
-  /* padding: .4em 0; */
-  text-shadow: 1px 1px 1px rgb(0 0 0 / 25%);
-  font-size: 25px;
+.span-title {
+    text-shadow: 1px 1px 1px rgb(0 0 0 / 25%);
+    font-size: 25px;
 }
 
 button {
-  border-radius: 11px;
-  background-color: rgba(0, 0, 0, 0.1);
-  color: white;
-  text-shadow: 1px 1px 1px rgb(0 0 0 / 25%);
-  height: 110%;
-  font-family: 'Poppins', sans-serif;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  width: 100px;
-  font-size: 22px;
-  font-weight: 600;
+    border-radius: 11px;
+    background-color: rgba(0, 0, 0, 0.1);
+    color: white;
+    text-shadow: 1px 1px 1px rgb(0 0 0 / 25%);
+    height: 110%;
+    font-family: 'Poppins', sans-serif;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    width: 100px;
+    font-size: 22px;
+    font-weight: 600;
 }
 
 p {
-  font-size: 20px;
-  margin: 10px 0px;
+    font-size: 20px;
+    margin: 10px 0px;
+}
+
+span{
+    font-size: 20px;
 }
 
 .button-body {
-  border-radius: 11px;
-  background-color: #d33a2c;
-  border: 1px solid #d33a2c;
-  color: white;
-  text-shadow: none;
-  height: 40px;
-  font-family: 'Poppins', sans-serif;
-  width: 100px;
-  font-size: 15px;
-  font-weight: 600;
+    border-radius: 10px;
+    background-color: #d33a2c;
+    border: 1px solid #d33a2c;
+    color: white;
+    text-shadow: none;
+    height: 45px;
+    font-family: 'Poppins', sans-serif;
+    width: fit-content;
+    padding: 0px 15px;
+    margin: auto;
+    font-size: 15px;
+    font-weight: 600;
 }
 
-div {
-  /* background-color: wheat; */
-  margin: 5px 0px;
-  padding: 10px 0px;
+select {
+    border-radius: 10px;
+    font-size: 15px;
+    font-family: 'Poppins', sans-serif;
+    height: 40px;
+    width: 50%;
+    padding: 5px;
 }
 
-#angle{
-  font-size: 50px;
+input {
+    border-radius: 10px;
+    font-size: 15px;
+    font-family: 'Poppins', sans-serif;
+    /* height: 30px; */
+    width: fit-content;
+    padding: 5px;
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+    padding: 15%;
+    gap: 15px;
 }
