--- a/styles_stats.css
+++ b/styles_stats.css
@@ -1,24 +1,14 @@
 body {
     margin: 0;
     font-family: 'Poppins', sans-serif;
-    font-weight: 200;
-    text-emphasis: none;
-    text-align: center;
+    font-weight: 400;
+    /* text-emphasis: none;
+    text-align: center; */
 }
 
 .flex-container {
-    /* We first create a flex layout context */
     display: flex;
-
-    /* Then we define the flow direction 
-         and if we allow the items to wrap 
-       * Remember this is the same as:
-       * flex-direction: row;
-       * flex-wrap: wrap;
-       */
     flex-flow: row wrap;
-
-    /* Then we define how is distributed the remaining space */
     justify-content: space-around;
     padding: 10px;
     margin: 0;
@@ -40,14 +30,8 @@ body {
 header {
     box-shadow: 0 4px 20px 0 rgb(0 0 0 / 12%);
     margin-bottom: 20px !important;
-
 }
 
-span {
-    /* padding: .4em 0; */
-    text-shadow: 1px 1px 1px rgb(0 0 0 / 25%);
-    font-size: 25px;
-}
 
 button {
     border-radius: 11px;
@@ -60,28 +44,4 @@ button {
     width: 100px;
     font-size: 22px;
     font-weight: 600;
-}
-
-p {
-    font-size: 20px;
-    margin: 10px 0px;
-}
-
-.button-body {
-    border-radius: 11px;
-    background-color: #d33a2c;
-    border: 1px solid #d33a2c;
-    color: white;
-    text-shadow: none;
-    height: 40px;
-    font-family: 'Poppins', sans-serif;
-    width: 100px;
-    font-size: 15px;
-    font-weight: 600;
-}
-
-div {
-    /* background-color: wheat; */
-    margin: 10px 0px;
-
 }
